WIP. tree. fix tree lines overlapping

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,7 +22,8 @@
 
 @theme inline {
     --font-heading: var(--font-sans);
-    --font-sans: 'Geist Variable', sans-serif;
+    /* --font-sans: 'Geist Variable', sans-serif; */
+    --font-sans: "Roboto Condensed Variable", sans-serif;
     --color-sidebar-ring: var(--sidebar-ring);
     --color-sidebar-border: var(--sidebar-border);
     --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
